Вёрстка блока "Абонементы"

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -132,7 +132,7 @@
   top: 408px;
   left: 437px;
   width: 364px;
-  height: 228px;
+  min-height: 228px;
 
   @media (max-width: $tablet-width) {
     width: 39.233%;
