--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,8 +14,10 @@ $color-resolution-blue:             #1c3374;
 $color-persian-blue:                #2e35ac;
 $color-torch-red:                   #ed0233;
 $color-chambray:                    #495a7d;
+$color-whisper:                     #e8e8e8;
 $color-crete-opacity:               rgba(120, 120, 120, 0.2);
 $color-crimson-opacity:             rgba(209, 10, 66, 0.2);
+$color-crimson:                     #d10a42;
 
 // Gradient
 
