--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -2,6 +2,7 @@
 // ---------------------------------
 
 @import "vendor/normalize";
+@import "vendor/swiper";
 
 // Global
 // ---------------------------------
@@ -20,3 +21,5 @@
 @import "blocks/tickets";
 @import "blocks/tabs";
 @import "blocks/promo";
+@import "blocks/coaches";
+@import "blocks/advantages";
