Вёрстка блока "Преимущества"

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,6 @@
 @import "blocks/about";
 @import "blocks/tickets";
 @import "blocks/tabs";
-@import "blocks/promo";
+@import "blocks/event";
 @import "blocks/coaches";
 @import "blocks/advantages";
