--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -19,6 +19,7 @@ $color-whisper:                     #e8e8e8;
 $color-crete-opacity:               rgba(120, 120, 120, 0.2);
 $color-crimson-opacity:             rgba(209, 10, 66, 0.2);
 $color-crimson:                     #d10a42;
+$color-crimson-opacity:             rgba(209, 10, 66, 0.2);
 $color-dark-gray:                   #afafaf;
 $color-spindle:                     #b6bdcc;
 
