--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,4 +1,4 @@
-.promo {
+.event {
   display: flex;
   color: $color-default-white;
   margin-bottom: 120px;
@@ -30,7 +30,7 @@
   }
 }
 
-.promo__about-container {
+.event__about-container {
   width: 43.1%;
   min-height: 500px;
   background-color: $color-torch-red;
@@ -51,7 +51,7 @@
   }
 }
 
-.promo__about-container h2 {
+.event__about-container h2 {
   margin: 0;
   margin-right: 50px;
   margin-bottom: 20px;
@@ -72,13 +72,13 @@
   }
 }
 
-.promo__list {
+.event__list {
   margin: 0;
   display: flex;
   flex-wrap: wrap;
 }
 
-.promo__list-item {
+.event__list-item {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -89,7 +89,7 @@
   }
 }
 
-.promo__list-term {
+.event__list-term {
   font-size: 18px;
   line-height: 27px;
   margin-bottom: 7px;
@@ -101,7 +101,7 @@
   }
 }
 
-.promo__list-detail {
+.event__list-detail {
   display: flex;
   margin: 0;
   font-weight: 700;
@@ -117,7 +117,7 @@
   }
 }
 
-.promo__list-detail-reduce-text {
+.event__list-detail-reduce-text {
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
@@ -131,7 +131,7 @@
   }
 }
 
-.promo__about-container p {
+.event__about-container p {
   grid-area: 2 / 1 / 3 / -1;
   margin: 0;
   font-size: 18px;
@@ -143,7 +143,7 @@
   }
 }
 
-.promo__button {
+.event__button {
   align-self: end;
   justify-self: center;
   grid-area: 3 / 1 / -1 / -1;
