--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -140,7 +140,7 @@
   }
 
   &:hover {
-    border-image: $button-buy-gradient 1;
+    border-image: $border-hover-gradient 1;
   }
 
   &::before {
