--- a/source/sass/global/utils.scss
+++ b/source/sass/global/utils.scss
@@ -24,7 +24,7 @@
     width: 88.28%;
   }
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: $mobile-width) {
     width: 90.62%;
   }
 }
