--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,6 +16,7 @@
 // ---------------------------------
 
 @import "blocks/page";
+@import "blocks/button-slider";
 @import "blocks/header";
 @import "blocks/about";
 @import "blocks/tickets";
@@ -23,3 +24,6 @@
 @import "blocks/event";
 @import "blocks/coaches";
 @import "blocks/advantages";
+@import "blocks/promo";
+@import "blocks/comments";
+@import "blocks/connection";
