--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,13 +1,16 @@
 .advantages {
   background-color: $color-ghost-white;
   padding: 120px 0;
+  margin-bottom: 120px;
 
   @media (max-width: $tablet-width) {
     padding: 100px 0;
+    margin-bottom: 100px;
   }
 
   @media (max-width: $mobile-width) {
     padding: 70px 0;
+    margin-bottom: 70px;
   }
 }
 
@@ -146,7 +149,7 @@
   }
 
   &--simulators {
-    grid-area: 1 / 2 / -1 / 3;
+    grid-area: 1 / 2 / 3 / 3;
     background-color: $color-resolution-blue;
     padding: 65px 14%;
     color: $color-default-white;
