--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -11,6 +11,7 @@ $color-default-black-opacity:       rgba(16, 38, 84, 0.89);
 
 $color-ghost-white:                 #f8f9fc;
 $color-egyptian-blue:               #103aae;
+$color-cornflower-blue:             #548fe6;
 $color-resolution-blue:             #1c3374;
 $color-persian-blue:                #2e35ac;
 $color-torch-red:                   #ed0233;
@@ -22,13 +23,18 @@ $color-crimson:                     #d10a42;
 $color-crimson-opacity:             rgba(209, 10, 66, 0.2);
 $color-dark-gray:                   #afafaf;
 $color-spindle:                     #b6bdcc;
+$color-comments-box-shadow:         rgba(28, 51, 116, 0.2);
+$color-light-slate-grey:            #74819c;
 
 // Gradient
 
+$border-hover-gradient:             linear-gradient(127deg, #d10a42 17.6%, #00359f 95.31%);
+$border-gradient:                   linear-gradient(170deg, #d10a42 17.6%, #00359f 95.31%);
 $button-buy-gradient:               linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
 $header-gradient-desktop:           conic-gradient(from 130.31deg at 16.03% 39.06%, #B80027 -46.69deg, #003D85 32.24deg, #B80027 313.31deg, #003D85 392.24deg);
 $header-gradient-tablet:            conic-gradient(from 139.4deg at 20.7% 35.74%, #B80027 -46.69deg, #003D85 32.24deg, #B80027 313.31deg, #003D85 392.24deg);
 $header-gradient-mobile:            conic-gradient(from 171.43deg at 35.31% 34.22%, #B80027 -46.69deg, #003D85 32.24deg, #B80027 313.31deg, #003D85 392.24deg);
+$connection-background-gradient:    linear-gradient(to right, #102654 50%, #ffffff 50%);
 
 // Display width
 
