--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -41,7 +41,9 @@ $connection-background-gradient:    linear-gradient(to right, #102654 50%, #ffff
 $desktop-max: 1365px;
 $desktop-min: 1200px;
 $tablet-width: 1199.9px;
+$tablet-resize: 770px;
 $mobile-width: 767px;
+$mobile-resize: 325px;
 
 // Other
 
