--- a/source/sass/blocks/comments.scss
+++ b/source/sass/blocks/comments.scss
@@ -46,14 +46,24 @@
 .comments__item {
   display: flex;
   margin: 0;
-  padding: 60px 62px 0;
+  padding: 60px 62px 10px;
   color: $color-default-white;
   min-height: 242px;
+
+  @media (min-width: $tablet-resize) and (max-width: $desktop-max) {
+    min-height: 0;
+    padding-bottom: 60px;
+  }
 
   @media (max-width: $mobile-width) {
     display: block;
     padding: 35px 25px 0;
     min-height: 335px;
+  }
+
+  @media (min-width: $mobile-resize) and (max-width: $tablet-width) {
+    min-height: 0;
+    padding-bottom: 35px;
   }
 }
 
