Добавляет разметку подвала

--- a/source/sass/blocks/button-slider.scss
+++ b/source/sass/blocks/button-slider.scss
@@ -2,7 +2,7 @@
   content: "";
   width: 16px;
   height: 32px;
-  background-image: url("../img/sprite/arrow-slider.svg");
+  background-image: url("../img/svg/arrow-slider.svg");
   background-size: cover;
 
   @media (max-width: $mobile-width) {
