--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -25,6 +25,7 @@ $color-dark-gray:                   #afafaf;
 $color-spindle:                     #b6bdcc;
 $color-comments-box-shadow:         rgba(28, 51, 116, 0.2);
 $color-light-slate-grey:            #74819c;
+$color-black-russian:               #030a1a;
 
 // Gradient
 
