--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -32,9 +32,9 @@ $color-black-russian:               #030a1a;
 $border-hover-gradient:             linear-gradient(127deg, #d10a42 17.6%, #00359f 95.31%);
 $border-gradient:                   linear-gradient(170deg, #d10a42 17.6%, #00359f 95.31%);
 $button-buy-gradient:               linear-gradient(97.05deg, #ed0233 17.6%, #003eb7 95.31%);
-$header-gradient-desktop:           conic-gradient(from 130.31deg at 16.03% 39.06%, #B80027 -46.69deg, #003D85 32.24deg, #B80027 313.31deg, #003D85 392.24deg);
-$header-gradient-tablet:            conic-gradient(from 139.4deg at 20.7% 35.74%, #B80027 -46.69deg, #003D85 32.24deg, #B80027 313.31deg, #003D85 392.24deg);
-$header-gradient-mobile:            conic-gradient(from 171.43deg at 35.31% 34.22%, #B80027 -46.69deg, #003D85 32.24deg, #B80027 313.31deg, #003D85 392.24deg);
+$header-gradient-desktop:           conic-gradient(from 130.31deg at 16.03% 39.06%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+$header-gradient-tablet:            conic-gradient(from 139.4deg at 20.7% 35.74%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
+$header-gradient-mobile:            conic-gradient(from 171.43deg at 35.31% 34.22%, #b80027 -46.69deg, #003d85 32.24deg, #b80027 313.31deg, #003d85 392.24deg);
 $connection-background-gradient:    linear-gradient(to right, #102654 50%, #ffffff 50%);
 
 // Display width
