--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -1,16 +1,16 @@
 .advantages {
   background-color: $color-ghost-white;
-  padding: 120px 0;
+  padding: 119px 0 118px;
   margin-bottom: 120px;
 
   @media (max-width: $tablet-width) {
-    padding: 100px 0;
+    padding: 99px 0;
     margin-bottom: 100px;
   }
 
   @media (max-width: $mobile-width) {
     padding: 70px 0;
-    margin-bottom: 70px;
+    margin-bottom: 68px;
   }
 }
 
@@ -20,17 +20,20 @@
   font-size: 49px;
   line-height: 49px;
   margin: 0;
-  margin-bottom: 80px;
+  margin-bottom: 69px;
+  letter-spacing: 1px;
+  word-spacing: -4px;
 
   @media (max-width: $tablet-width) {
     font-size: 42px;
     line-height: 42px;
-    margin-bottom: 60px;
+    margin-bottom: 51px;
   }
 
   @media (max-width: $mobile-width) {
     font-size: 32px;
     line-height: 32px;
+    margin-bottom: 52px;
   }
 }
 
@@ -50,13 +53,14 @@
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     width: 88.28%;
+    column-gap: 4%;
   }
 
   @media (max-width: $mobile-width) {
     grid-template-columns: 1fr;
     width: 100%;
     column-gap: normal;
-    row-gap: 50px;
+    row-gap: 42px;
   }
 }
 
@@ -75,32 +79,43 @@
     height: 76px;
     background: url("../img/svg/advantages/square.svg") no-repeat;
     background-size: cover;
-    margin-right: 40px;
+    margin-right: 29px;
+    margin-top: -3px;
     flex-shrink: 0;
 
     @media (max-width: $tablet-width) {
       width: 89px;
       height: 62px;
+      background-image: url("../img/svg/advantages/square-tablet.svg");
     }
 
     @media (max-width: $mobile-width) {
       background-image: url("../img/svg/advantages/square-mobile.svg");
       margin-right: 0;
+      margin-bottom: 21px;
     }
   }
 
   &--square,
   &--parking {
-    padding-bottom: 80px;
+    padding-bottom: 77px;
     border-bottom: 2px solid $color-crimson-opacity;
 
     @media (max-width: $tablet-width) {
       border: none;
-      padding-bottom: 50px;
+      padding-bottom: 44px;
     }
 
     @media (max-width: $mobile-width) {
       padding-bottom: 0;
+    }
+  }
+
+  &--square {
+    padding-left: 26px;
+
+    @media (max-width: $tablet-width) {
+      padding-left: 0;
     }
   }
 
@@ -109,41 +124,53 @@
       width: 72px;
       height: 77px;
       background-image: url("../img/svg/advantages/parking.svg");
-      margin-right: 35px;
+      margin-right: 31px;
+      margin-top: -4px;
 
       @media (max-width: $tablet-width) {
         width: 59px;
         height: 64px;
+        background-image: url("../img/svg/advantages/parking-tablet.svg");
+        margin-top: -2px;
       }
 
       @media (max-width: $mobile-width) {
         background-image: url("../img/svg/advantages/parking-mobile.svg");
+        margin-top: 0;
+        margin-bottom: 18px;
       }
     }
   }
 
   &--comfort {
     padding-top: 80px;
+    margin-bottom: -5px;
 
     @media (max-width: $tablet-width) {
-      padding-top: 50px;
+      padding-top: 49px;
     }
 
     @media (max-width: $mobile-width) {
       padding-top: 0;
+      margin-bottom: 0;
     }
 
     &::before {
       height: 76px;
       background-image: url("../img/svg/advantages/comfort.svg");
+      margin-left: 19px;
 
       @media (max-width: $tablet-width) {
         width: 89px;
         height: 63px;
+        margin-left: 0;
+        background-image: url("../img/svg/advantages/comfort-tablet.svg");
+        margin-top: -1px;
       }
 
       @media (max-width: $mobile-width) {
         background-image: url("../img/svg/advantages/comfort-mobile.svg");
+        margin-bottom: 17px;
       }
     }
   }
@@ -151,22 +178,25 @@
   &--simulators {
     grid-area: 1 / 2 / 3 / 3;
     background-color: $color-resolution-blue;
-    padding: 65px 14%;
+    padding: 56px 14%;
+    padding-left: 13.5%;
     color: $color-default-white;
     text-align: center;
 
     @media (max-width: $tablet-width) {
       grid-area: 2 / 1 / 3 / -1;
-      width: 66.16%;
+      width: 65.16%;
       justify-self: center;
-      padding: 45px 20%;
+      padding: 30px 18% 10px;
+      min-height: 239px;
     }
 
     @media (max-width: $mobile-width) {
       grid-area: auto;
       width: 100%;
       justify-self: center;
-      padding: 45px 23%;
+      padding: 48px 17% 42px;
+      margin-bottom: 9px;
     }
 
     &::before {
@@ -176,9 +206,10 @@
 
   &--experience {
     padding-top: 80px;
+    margin-bottom: -5px;
 
     @media (max-width: $tablet-width) {
-      padding-top: 50px;
+      padding-top: 49px;
     }
 
     @media (max-width: $mobile-width) {
@@ -189,10 +220,14 @@
       width: 72px;
       height: 75px;
       background-image: url("../img/svg/advantages/experience.svg");
+      margin-top: -2px;
+      margin-right: 32px;
 
       @media (max-width: $tablet-width) {
         width: 57px;
         height: 61px;
+        background-image: url("../img/svg/advantages/experience-tablet.svg");
+        margin-top: -1px;
       }
 
       @media (max-width: $mobile-width) {
@@ -210,7 +245,7 @@
 
 .advantages__list-item--parking .advantages__list-item-text-container {
   @media (max-width: $mobile-width) {
-    width: 69%;
+    width: 80%;
   }
 }
 
@@ -222,48 +257,81 @@
 
 .advantages__list-item--experience .advantages__list-item-text-container {
   @media (max-width: $mobile-width) {
-    width: 70%;
+    width: 80%;
   }
 }
 
 .advantages__list-item-text-container h3 {
   margin: 0;
+  margin-top: -7px;
   font-size: 22px;
   line-height: 33px;
-  margin-bottom: 15px;
+  margin-bottom: 6px;
 
   @media (max-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 1px;
   }
 }
 
 .advantages__list-item--simulators h3 {
   font-size: 26px;
   line-height: 39px;
+  margin-bottom: 32px;
 
   @media (max-width: $tablet-width) {
     font-size: 22px;
     line-height: 33px;
     width: 120px;
     margin: 0 auto;
-    margin-bottom: 10px;
+    margin-bottom: 13px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 8px;
+  }
+}
+
+.advantages__list-item--comfort h3 {
+  margin-bottom: 8px;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 2px;
+  }
+}
+
+.advantages__list-item--experience h3 {
+  @media (max-width: $tablet-width) {
+    margin-bottom: 2px;
   }
 }
 
 .advantages__simulators-big-text {
   font-size: 74px;
-  line-height: 111px;
+  line-height: 81px;
+
+  @media (max-width: $tablet-width) {
+    padding-right: 5px;
+    line-height: 77px;
+  }
+
+  @media (max-width: $mobile-width) {
+    line-height: 55px;
+    margin-bottom: 3px;
+    font-size: 72px;
+  }
 }
 
 .advantages__list-item-text-container p {
   margin: 0;
   line-height: 22px;
   font-weight: 300;
+  margin-left: -1px;
 }
 
 .advantages__list-item--simulators p {
   line-height: 24px;
   font-weight: 400;
+  padding-left: 3px;
 }
