--- a/source/sass/blocks/coaches.scss
+++ b/source/sass/blocks/coaches.scss
@@ -16,18 +16,21 @@
   font-size: 49px;
   line-height: 49px;
   text-transform: uppercase;
-  margin-bottom: 62px;
+  margin-bottom: 51px;
+  letter-spacing: 2px;
 
   @media (max-width: $tablet-width) {
     font-size: 42px;
     line-height: 42px;
-    margin-bottom: 50px;
+    margin-bottom: 41px;
     text-align: center;
   }
 
   @media (max-width: $mobile-width) {
     font-size: 32px;
     line-height: 32px;
+    letter-spacing: 0.9px;
+    margin-bottom: 43px;
   }
 }
 
@@ -35,11 +38,11 @@
   position: relative;
 
   @media (min-width: $desktop-min) and (max-width: $desktop-max) {
-    width: 93%;
+    width: 89%;
   }
 
   @media (max-width: $tablet-width) {
-    padding: 0 46px;
+    padding: 0 56px;
   }
 
   @media (max-width: $mobile-width) {
@@ -50,16 +53,31 @@
 .coaches__slide {
   position: relative;
   text-align: center;
+
+  @media (max-width: $tablet-width) {
+    padding-top: 51.95%;
+  }
+
+  @media (max-width: $mobile-width) {
+    padding-top: 121.23%;
+  }
 }
 
 .coaches__slide img {
   vertical-align: top;
   width: 100%;
+
+  @media (max-width: $tablet-width) {
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
 }
 
 .coaches__slide h3 {
   position: absolute;
-  bottom: 20px;
+  bottom: 12px;
   margin: 0;
   padding: 10px;
   width: 100%;
@@ -67,6 +85,11 @@
   color: $color-default-white;
   font-size: 18px;
   line-height: 27px;
+  z-index: 1;
+
+  @media (max-width: $tablet-width) {
+    left: 3px;
+  }
 }
 
 .coaches__slide:hover h3 {
@@ -83,11 +106,11 @@
   background-color: $color-default-black-opacity;
   color: $color-default-white;
   text-align: center;
-  padding: 50px;
+  padding: 52px 20px 10px;
   overflow-y: auto;
 
   @media (max-width: $mobile-width) {
-    padding: 28px 33px;
+    padding: 43px 17px 10px 23px;
   }
 }
 
@@ -99,13 +122,25 @@
   margin: 0;
   font-size: 18px;
   line-height: 27px;
+
+  @media (max-width: $tablet-width) {
+    margin-left: -8px;
+  }
 }
 
 .coaches__info p {
   margin: 0;
   color: $color-spindle;
-  margin-bottom: 45px;
-  line-height: 24px;
+  margin-bottom: 37px;
+  line-height: 16px;
+
+  @media (max-width: $tablet-width) {
+    margin-left: -6px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 36px;
+  }
 }
 
 .coaches__list {
@@ -113,13 +148,22 @@
   text-align: left;
   padding: 0;
   margin: 0;
+  padding-left: 30px;
+
+  @media (max-width: $mobile-width) {
+    padding-left: 7px;
+  }
 }
 
 .coaches__list-item {
   position: relative;
-  padding-left: 16px;
+  padding-left: 21px;
   font-size: 14px;
   line-height: 21px;
+
+  @media (max-width: $mobile-width) {
+    padding-left: 20px;
+  }
 
   &::before {
     content: ".";
@@ -131,10 +175,10 @@
   }
 
   &:not(:last-child) {
-    margin-bottom: 20px;
+    margin-bottom: 13px;
 
     @media (max-width: $mobile-width) {
-      margin-bottom: 10px;
+      margin-bottom: 13px;
     }
   }
 }
