--- a/source/sass/blocks/comments.scss
+++ b/source/sass/blocks/comments.scss
@@ -5,6 +5,7 @@
 
   @media (max-width: $tablet-width) {
     margin-bottom: 100px;
+    width: 564px;
   }
 
   @media (max-width: $mobile-width) {
@@ -18,25 +19,27 @@
   text-align: center;
   font-size: 49px;
   line-height: 49px;
-  margin-bottom: 60px;
+  margin-bottom: 52px;
   text-transform: uppercase;
   font-family: $font-bebas-neue;
+  letter-spacing: 0.03em;
 
   @media (max-width: $tablet-width) {
     font-size: 42px;
     line-height: 42px;
-    margin-bottom: 50px;
+    margin-bottom: 39px;
   }
 
   @media (max-width: $mobile-width) {
     font-size: 32px;
     line-height: 32px;
+    margin-bottom: 42px;
   }
 }
 
 .comments__wrapper {
   position: relative;
-  box-shadow: 0px 0px 40px $color-comments-box-shadow;
+  box-shadow: 0 0 40px $color-comments-box-shadow;
 }
 
 .comments__swiper {
@@ -46,23 +49,26 @@
 .comments__item {
   display: flex;
   margin: 0;
-  padding: 60px 62px 10px;
+  padding: 62px 62px 10px;
   color: $color-default-white;
   min-height: 242px;
 
   @media (min-width: $tablet-resize) and (max-width: $desktop-max) {
-    min-height: 0;
     padding-bottom: 60px;
+  }
+
+  @media (max-width: $tablet-width) {
+    padding-left: 64px;
+    padding-right: 63px;
   }
 
   @media (max-width: $mobile-width) {
     display: block;
-    padding: 35px 25px 0;
+    padding: 40px 23px 0;
     min-height: 335px;
   }
 
   @media (min-width: $mobile-resize) and (max-width: $tablet-width) {
-    min-height: 0;
     padding-bottom: 35px;
   }
 }
@@ -77,16 +83,22 @@
     float: left;
     width: 68px;
     margin-right: 15px;
+    margin-left: 18px;
   }
 }
 
 .comments__author-name {
   font-size: 20px;
-  line-height: 30px;
+  line-height: 14px;
   font-weight: 700;
   font-style: normal;
-  margin-bottom: 25px;
+  margin-bottom: 21px;
   display: block;
+
+  @media (max-width: $mobile-width) {
+    line-height: 27px;
+    padding-top: 7px;
+  }
 }
 
 .comments__author-contain p {
@@ -95,12 +107,13 @@
 
   @media (max-width: $mobile-width) {
     text-align: center;
+    line-height: 22.6px;
   }
 }
 
 .comments__button-prev {
   @media (max-width: $tablet-width) {
-    left: -45px;
+    left: -63px;
   }
 
   @media (max-width: $mobile-width) {
@@ -110,7 +123,7 @@
 
 .comments__button-next {
   @media (max-width: $tablet-width) {
-    right: -45px;
+    right: -63px;
   }
 
   @media (max-width: $mobile-width) {
