--- a/source/sass/blocks/connection.scss
+++ b/source/sass/blocks/connection.scss
@@ -20,47 +20,54 @@
 .connection__form-container {
   margin-left: auto;
   max-width: 683px;
-  padding: 70px 0;
+  padding: 61px 0;
 
   @media (max-width: $tablet-width) {
     margin-left: 0;
     max-width: none;
+    padding: 69px 0;
   }
 
   @media (max-width: $mobile-width) {
     width: 90.62%;
     margin: 0 auto;
+    padding-bottom: 68px;
   }
 }
 
 .connection__form-wrapper h3 {
   margin: 0;
-  margin-bottom: 50px;
+  margin-bottom: 32px;
   font-family: $font-bebas-neue;
   font-size: 49px;
   line-height: 64px;
   padding: 0 17.56% 0 15.07%;
+  letter-spacing: 0.03em;
+  word-spacing: -9px;
 
   @media (max-width: $tablet-width) {
     font-size: 42px;
     line-height: 42px;
-    padding: 0 17.318%;
+    padding: 0 17.31%;
+    margin-bottom: 34px;
   }
 
   @media (max-width: $mobile-width) {
     font-size: 32px;
     line-height: 32px;
     padding: 0;
+    word-spacing: -6px;
+    margin-bottom: 36px;
   }
 }
 
 .connection__form-wrapper form {
   display: flex;
   flex-direction: column;
-  padding: 0 17.56% 0 15.07%;
+  padding: 0 24.6% 0 15.07%;
 
   @media (max-width: $tablet-width) {
-    padding: 0 21.224% 0 17.318%;
+    padding: 0 21.22% 0 17.31%;
   }
 
   @media (max-width: $mobile-width) {
@@ -75,7 +82,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 29px;
 
   @media (max-width: $mobile-width) {
     margin-bottom: 40px;
@@ -91,6 +98,10 @@
 
   @media (max-width: $mobile-width) {
     width: 100%;
+
+    &:not(:last-child) {
+      margin-bottom: 32px;
+    }
   }
 }
 
@@ -99,7 +110,7 @@
   background-color: transparent;
   border: none;
   border-bottom: 1px solid $color-light-slate-grey;
-  padding: 10px 0;
+  padding: 4px 0;
   color: $color-default-white;
 
   &::placeholder {
@@ -118,8 +129,9 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
-  min-height: 52px;
+  min-height: 55px;
   padding: 10px;
+  letter-spacing: 0.05em;
 }
 
 .connection__contacts {
@@ -135,11 +147,12 @@
 .connection__contacts-container {
   max-width: 683px;
   margin-right: auto;
-  padding: 70px 0;
+  padding: 68px 0 66px;
 
   @media (max-width: $tablet-width) {
     max-width: none;
     margin-right: 0;
+    padding: 68px 0;
   }
 
   @media (max-width: $mobile-width) {
@@ -154,28 +167,31 @@
   line-height: 49px;
   text-transform: uppercase;
   font-family: $font-bebas-neue;
-  margin-bottom: 50px;
+  margin-bottom: 45px;
   padding: 0 15.07% 0 17.56%;
+  letter-spacing: 0.03em;
 
   @media (max-width: $tablet-width) {
     font-size: 42px;
     line-height: 42px;
-    padding: 0 17.318%;
+    padding: 0 17.31%;
+    margin-bottom: 41px;
   }
 
   @media (max-width: $mobile-width) {
     font-size: 32px;
     line-height: 32px;
     padding: 0;
+    margin-bottom: 43px;
   }
 }
 
 .connection__contacts-wrapper {
   display: flex;
-  padding: 0 15.07% 0 17.56%;
+  padding: 0 15.07% 0 18.1%;
 
   @media (max-width: $tablet-width) {
-    padding: 0 23.3% 0 17.318%;
+    padding: 0 23.3% 0 17.31%;
     justify-content: space-between;
   }
 
@@ -189,7 +205,7 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  padding-right: 60px;
+  padding-right: 61px;
 
   @media (max-width: $tablet-width) {
     padding-right: 48px;
@@ -199,13 +215,13 @@
     padding: 0;
 
     &:not(:last-child) {
-      margin-bottom: 35px;
+      margin-bottom: 33px;
       margin-right: 30px;
     }
   }
 
   &--remote {
-    padding-left: 60px;
+    padding-left: 59px;
     padding-right: 0;
     border-left: 1px solid $color-light-slate-grey;
 
@@ -222,29 +238,58 @@
 
 .connection__item {
   &:not(:last-child) {
-    margin-bottom: 20px;
+    margin-bottom: 23px;
+
+    @media (max-width: $tablet-width) {
+      margin-bottom: 19px;
+    }
 
     @media (max-width: $mobile-width) {
       margin-bottom: 25px;
     }
   }
+
+  @media (max-width: $tablet-width) {
+    &:last-child {
+      transform: translateY(7px);
+    }
+  }
+}
+
+.connection__list--remote .connection__item:not(:last-child) {
+  @media (max-width: $mobile-width) {
+    margin-bottom: 20px;
+  }
+}
+
+.connection__list--location .connection__item:not(:last-child) {
+  margin-bottom: 21px;
 }
 
 .connection__item h4 {
   margin: 0;
-  margin-bottom: 5px;
-  line-height: 24px;
+  margin-bottom: 8px;
+  line-height: 16px;
 
   @media (max-width: $tablet-width) {
     font-size: 20px;
     line-height: 30px;
-    margin-bottom: 10px;
+    margin-bottom: -2px;
+    transform: translateY(-8px);
   }
+}
+
+.connection__item--timetable h4 {
+  margin-bottom: 12px;
 }
 
 .connection__detail {
   font-size: 14px;
-  line-height: 21px;
+  line-height: 12px;
+
+  &--address {
+    line-height: 21px;
+  }
 
   @media (max-width: $tablet-width) {
     font-size: 18px;
