--- a/source/sass/blocks/event.scss
+++ b/source/sass/blocks/event.scss
@@ -2,14 +2,18 @@
   display: flex;
   color: $color-default-white;
   margin-bottom: 120px;
+  width: 1160px;
+  margin: 0 auto;
 
   @media (max-width: $tablet-width) {
-    margin-bottom: 100px;
+    margin-bottom: 98px;
+    width: 678px;
   }
 
   @media (max-width: $mobile-width) {
     flex-direction: column;
     margin-bottom: 70px;
+    width: 90.62%;
   }
 
   &::after {
@@ -23,6 +27,7 @@
     }
 
     @media (max-width: $tablet-width) {
+      width: 386px;
       background-image: url("../img/background/supergames-background-tablet.png");
 
       @media (min-resolution: 2dppx) {
@@ -49,38 +54,44 @@
   display: grid;
   grid-template-columns: repeat(2, min-content);
   grid-template-rows: repeat(2, min-content) 1fr;
-  padding: 87px 20px;
+  padding: 84px 20px 84px 17px;
   justify-content: center;
 
   @media (max-width: $tablet-width) {
     min-height: 292px;
-    padding: 51px 20px;
+    padding: 47px 24px 52px 20px;
+    width: 292px;
   }
 
   @media (max-width: $mobile-width) {
     width: 100%;
-    grid-template-columns: 56% 22.4%;
+    grid-template-columns: 60% 22%;
+    padding: 50px 24px 48px 20px;
   }
 }
 
 .event__about-container h2 {
   margin: 0;
-  margin-right: 50px;
-  margin-bottom: 20px;
+  margin-right: 46px;
+  margin-bottom: 9px;
   font-family: $font-bebas-neue;
   font-size: 90px;
   line-height: 90px;
+  letter-spacing: 3px;
+  padding-left: 2px;
 
   @media (max-width: $tablet-width) {
-    margin-right: 25px;
-    margin-bottom: 10px;
+    margin-right: 30px;
+    margin-bottom: 1px;
     font-size: 52px;
     line-height: 52px;
+    letter-spacing: 0.03em;
   }
 
   @media (max-width: $mobile-width) {
     margin-right: 25px;
-    margin-bottom: 10px;
+    margin-bottom: 0;
+    width: 120px;
   }
 }
 
@@ -88,28 +99,46 @@
   margin: 0;
   display: flex;
   flex-wrap: wrap;
+
+  @media (max-width: $mobile-width) {
+    width: 70px;
+  }
 }
 
 .event__list-item {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  margin-top: -2px;
 
   &:not(:last-child) {
-    margin-bottom: 6px;
+    margin-bottom: 1px;
     margin-right: 20px;
+
+    @media (max-width: $tablet-width) {
+      margin-bottom: 2px;
+      margin-right: 0;
+    }
   }
 }
 
 .event__list-term {
   font-size: 18px;
   line-height: 27px;
-  margin-bottom: 7px;
+  margin-bottom: 4px;
 
   @media (max-width: $tablet-width) {
     font-size: 12px;
     line-height: 18px;
-    margin-bottom: 3px;
+    margin-bottom: 2px;
+
+    &--time {
+      margin-bottom: 0;
+    }
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 1px;
   }
 }
 
@@ -119,27 +148,45 @@
   font-weight: 700;
   font-size: 40px;
   line-height: 40px;
-  padding-top: 5px;
+  padding-top: 4px;
   border-top: 1px solid $color-default-white;
+
+  &--time {
+    width: 89px;
+
+    @media (max-width: $tablet-width) {
+      width: auto;
+    }
+  }
 
   @media (max-width: $tablet-width) {
     font-size: 24px;
     line-height: 27px;
-    padding-top: 2px;
+    padding-top: 1px;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 42px;
+
+    &--time {
+      width: auto;
+    }
   }
 }
 
 .event__list-detail-reduce-text {
   font-size: 14px;
-  line-height: 21px;
+  line-height: 18px;
   font-weight: 400;
   width: 40px;
-  margin-left: 5px;
+  margin-left: 6px;
+  padding-top: 2px;
 
   @media (max-width: $tablet-width) {
     font-size: 10px;
-    line-height: 13px;
+    line-height: 12px;
     width: 30px;
+    margin-left: 4px;
   }
 }
 
@@ -148,6 +195,7 @@
   margin: 0;
   font-size: 18px;
   line-height: 27px;
+  padding-left: 3px;
 
   @media (max-width: $tablet-width) {
     font-size: 12px;
@@ -167,17 +215,25 @@
   font-weight: 700;
   border: 4px solid $color-default-white;
   width: 100%;
-  min-height: 67px;
+  min-height: 71px;
   padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+  min-width: 347px;
+  letter-spacing: 0.6px;
 
   @media (max-width: $tablet-width) {
     border-width: 2px;
     font-size: 10px;
     line-height: 12px;
-    min-height: 39px;
+    min-height: 40px;
+    min-width: 0;
+    margin-left: 2px;
+  }
+
+  @media (max-width: $mobile-width) {
+    min-height: 42px;
   }
 
   &:hover {
