--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -2,8 +2,12 @@
   background-color: $color-black-russian;
   padding: 44px 0;
 
+  @media (max-width: $tablet-width) {
+    padding: 47px 0;
+  }
+
   @media (max-width: $mobile-width) {
-    padding: 50px 0;
+    padding: 51px 0;
   }
 }
 
@@ -20,12 +24,12 @@
 .footer__nav {
   display: flex;
   align-items: flex-start;
-  min-width: 68%;
+  min-width: 72%;
   max-width: 88%;
   justify-content: space-between;
 
   @media (max-width: $tablet-width) {
-    min-width: 79%;
+    min-width: 83.1%;
     max-width: 82%;
   }
 
@@ -40,10 +44,17 @@
   margin-right: 30px;
   flex-shrink: 0;
 
+  @media (max-width: $tablet-width) {
+    width: 82px;
+    height: 18px;
+  }
+
   @media (max-width: $mobile-width) {
     position: absolute;
     top: 0;
     left: 0;
+    width: 68px;
+    height: 15px;
   }
 }
 
@@ -57,27 +68,30 @@
 .footer__nav-list {
   display: flex;
   flex-wrap: wrap;
+  padding-top: 1px;
 
   @media (max-width: $mobile-width) {
     display: block;
     flex-direction: column;
     column-count: 2;
+    padding-top: 0;
   }
 }
 
 .footer__nav-list-item {
-  margin-right: 40px;
+  margin-right: 40.3px;
 
   @media (max-width: $tablet-width) {
     margin-right: 30px;
   }
 
   @media (max-width: $mobile-width) {
-    margin-bottom: 20px;
-    margin-right: 70px;
+    margin-top: 20px;
+    margin-right: 60px;
 
     &:first-child {
-      padding-top: 40px;
+      padding-top: 37px;
+      margin-top: 0;
     }
   }
 
@@ -95,25 +109,46 @@
   line-height: 16px;
   color: $color-default-white;
   text-decoration: none;
+
+  @media (max-width: $mobile-width) {
+    font-size: 16px;
+    line-height: 19px;
+  }
 }
 
 .footer__social-list {
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   justify-content: flex-start;
   max-width: 50%;
   margin-left: auto;
+  margin-top: -1px;
 
   @media (max-width: $mobile-width) {
     margin-left: 0;
-    margin-top: 35px;
+    margin-top: 26px;
   }
 }
 
 .footer__social-list-item {
+  &--vk {
+    padding-top: 2px;
+
+    @media (max-width: $mobile-width) {
+      padding-top: 5px;
+    }
+  }
+
   &:not(:last-child) {
     margin-right: 25px;
+
+    @media (max-width: $tablet-width) {
+      margin-right: 20px;
+    }
+
+    @media (max-width: $mobile-width) {
+      margin-right: 35px;
+    }
   }
 
   &:hover {
