--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -1,7 +1,22 @@
+.page {
+  height: 100%;
+}
+
 .page__body {
+  height: 100%;
   font-family: "Roboto Condensed", "Arial", sans-serif;
   font-weight: 400;
   font-size: 16px;
   color: $color-default-black;
   min-width: 319px;
+  display: flex;
+  flex-direction: column;
+}
+
+.page__main {
+  flex: 1 0 auto;
+}
+
+.page__footer {
+  flex: 0 0 auto;
 }
