--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,5 +1,5 @@
 .promo {
-  margin-bottom: 120px;
+  margin-bottom: 118px;
 
   @media (max-width: $tablet-width) {
     margin-bottom: 100px;
@@ -17,17 +17,19 @@
   font-family: $font-bebas-neue;
   font-size: 49px;
   line-height: 49px;
-  margin-bottom: 60px;
+  margin-bottom: 51px;
+  letter-spacing: 0.03em;
 
   @media (max-width: $tablet-width) {
     font-size: 42px;
     line-height: 42px;
-    margin-bottom: 50px;
+    margin-bottom: 41px;
   }
 
   @media (max-width: $mobile-width) {
     font-size: 32px;
     line-height: 32px;
+    margin-bottom: 43px;
   }
 }
 
@@ -54,12 +56,15 @@
   border: 7px solid transparent;
   border-image: $border-gradient 1;
   padding: 28px;
+  padding-top: 25px;
   display: flex;
   flex-direction: column;
   min-height: 211px;
 
   @media (max-width: $mobile-width) {
     text-align: center;
+    padding-top: 37px;
+    padding-bottom: 39px;
   }
 
   &--unlimited {
@@ -76,6 +81,7 @@
 
     @media (max-width: $mobile-width) {
       flex-direction: column;
+      padding: 0;
     }
 
     &::after {
@@ -114,7 +120,7 @@
 
 .promo__list-item-container {
   background-color: $color-torch-red;
-  padding: 45px;
+  padding: 33px 45px 45px;
   display: flex;
   flex-direction: column;
 
@@ -127,22 +133,22 @@
   font-size: 26px;
   line-height: 24px;
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 11px;
 }
 
 .promo__list-item--unlimited h3 {
   font-size: 28px;
   line-height: 44px;
-  margin-bottom: 30px;
+  margin-bottom: 18px;
 
   @media (max-width: $mobile-width) {
-    margin-bottom: 20px;
+    margin-bottom: 13px;
   }
 }
 
 .promo__big-text {
   font-size: 70px;
-  line-height: 70px;
+  line-height: 59px;
 }
 
 .promo__list-item p {
@@ -160,12 +166,13 @@
   color: $color-resolution-blue;
   text-decoration: none;
   font-size: 12px;
-  line-height: 14px;
+  line-height: 10px;
   font-weight: 700;
   text-transform: uppercase;
   padding: 3px 0;
   align-self: start;
   border-bottom: 1px solid $color-resolution-blue;
+  letter-spacing: 0.05em;
 
   @media (max-width: $mobile-width) {
     align-self: center;
@@ -183,6 +190,5 @@
 .promo__list-item--unlimited .promo__button {
   color: $color-default-white;
   font-size: 14px;
-  line-height: 16px;
   border-bottom-color: $color-default-white;
 }
