--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -8,8 +8,12 @@
   flex-wrap: wrap;
   position: relative;
   justify-content: center;
-  margin-bottom: 39px;
+  margin-bottom: 34px;
   align-self: center;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 41px;
+  }
 
   @media (max-width: $mobile-width) {
     margin-bottom: 30px;
@@ -22,10 +26,11 @@
     width: 89%;
     height: 2px;
     background-color: $color-crete-opacity;
-    bottom: 0;
+    bottom: 4px;
 
     @media (max-width: $mobile-width) {
       width: 100%;
+      bottom: 3px;
     }
   }
 }
@@ -50,6 +55,10 @@
     text-align: center;
     padding: 17px 0;
 
+    &--half-year {
+      padding-right: 2px;
+    }
+
     &:nth-child(3n+1) {
       text-align: left;
     }
@@ -65,6 +74,10 @@
 
   &:not(:last-child) {
     margin-right: 13px;
+
+    @media (max-width: $tablet-width) {
+      margin-right: 21px;
+    }
 
     @media (max-width: $mobile-width) {
       margin-right: 0;
@@ -94,7 +107,12 @@
     width: 100%;
     height: 2px;
     background-color: $color-crimson;
-    bottom: -20px;
+    bottom: -16px;
+
+    @media (max-width: $mobile-width) {
+      bottom: -17px;
+      width: 112%;
+    }
   }
 }
 
@@ -128,15 +146,19 @@
 
 .tabs__content-list-item {
   position: relative;
-  padding: 68px 20px;
+  padding: 50px 20px 60px;
   display: flex;
   flex-direction: column;
   border: 7px solid transparent;
   align-items: center;
   background-color: $color-default-white;
 
+  @media (max-width: $tablet-width) {
+    padding: 56px 20px 60px;
+  }
+
   @media (max-width: $mobile-width) {
-    padding: 50px 15px;
+    padding: 45px 15px;
   }
 
   &:hover {
@@ -149,19 +171,19 @@
     font-size: 100px;
     line-height: 0;
     color: $color-whisper;
-    top: 217px;
+    top: 205px;
     left: 50%;
     transform: translate(-50%);
     opacity: 0.48;
     font-weight: 700;
 
     @media (max-width: $tablet-width) {
-      top: 201px;
+      top: 204px;
     }
 
     @media (max-width: $mobile-width) {
       font-size: 80px;
-      top: 175px;
+      top: 172px;
     }
   }
 
@@ -175,7 +197,6 @@
 
   &--coach-half-year::before {
     content: "28000";
-
   }
 
   &--day-half-year::before {
@@ -203,15 +224,16 @@
   font-size: 26px;
   line-height: 40px;
   margin: 0;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
 
   @media (max-width: $tablet-width) {
     line-height: 29px;
+    margin-bottom: 10px;
   }
 
   @media (max-width: $mobile-width) {
-  font-size: 22px;
-  line-height: 24px;
+    font-size: 22px;
+    line-height: 24px;
   }
 }
 
@@ -219,7 +241,11 @@
   margin: 0;
   line-height: 24px;
   color: $color-chambray;
-  margin-bottom: 50px;
+  margin-bottom: 65px;
+
+  @media (max-width: $tablet-width) {
+      margin-bottom: 53px;
+  }
 }
 
 .tabs__content-price {
@@ -228,19 +254,29 @@
   font-weight: 700;
   color: $color-egyptian-blue;
   margin: 0;
-  margin-bottom: 50px;
+  margin-bottom: 35px;
+  margin-left: 2px;
   z-index: 1;
+
+  @media (max-width: $tablet-width) {
+    margin-bottom: 30px;
+  }
 
   @media (max-width: $mobile-width) {
     font-size: 48px;
     line-height: 72px;
+    margin-left: 6px;
   }
 }
 
 .tabs__content-price-rouble {
   color: $color-default-black;
   font-weight: 400;
-  margin-left: 10px;
+  margin-left: 12px;
+
+  @media (max-width: $mobile-width) {
+    margin-left: 9px;
+  }
 }
 
 .tabs__content-button {
@@ -256,11 +292,12 @@
   padding: 10px;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 1px;
   border: 2px solid $color-resolution-blue;
+  letter-spacing: 0.7px;
 
   @media (max-width: $tablet-width) {
     width: 45.98%;
+    min-height: 67px;
   }
 
   @media (max-width: $mobile-width) {
