Исправляет мелкие ошибки

--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -109,6 +109,10 @@
     }
   }
 
+  @media (max-width: $mobile-width) {
+    width: 95%;
+  }
+
   &:not(:last-child) {
     margin-bottom: 8px;
   }
