--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -18,7 +18,7 @@
 
 .header__logo-phone-container {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
   line-height: 0;
 
   @media (max-width: $tablet-width) {
@@ -31,6 +31,8 @@
 }
 
 .header__logo {
+  margin-right: 15px;
+
   @media (max-width: $tablet-width) {
     width: 80px;
     height: 18px;
@@ -42,6 +44,19 @@
   }
 }
 
+.header__phone-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: 3px;
+  margin-left: auto;
+  max-width: 1022px;
+
+  @media (max-width: $tablet-width) {
+    margin-right: 0;
+    margin-top: -2px;
+  }
+}
+
 .header__phone {
   text-decoration: none;
   color: $color-default-white;
@@ -49,13 +64,11 @@
   line-height: 22px;
   letter-spacing: -0.5px;
   font-family: $font-bebas-neue;
-  margin-right: 3px;
+
 
   @media (max-width: $tablet-width) {
     font-size: 24px;
     line-height: 24px;
-    margin-right: 0;
-    margin-top: -2px;
   }
 
   @media (max-width: $mobile-width) {
@@ -129,7 +142,7 @@
   @media (max-width: $mobile-width) {
     margin: 0;
     padding-top: 124px;
-    margin-right: -86px;
+    margin-right: -87px;
   }
 }
 
@@ -215,6 +228,7 @@
   align-items: center;
   justify-content: center;
   letter-spacing: 0.6px;
+  user-select: none;
 
   @media (max-width: $tablet-width) {
     padding: 20px;
@@ -256,7 +270,6 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  max-height: 500px;
   font-size: 12px;
   line-height: 14px;
   align-self: flex-end;
@@ -273,6 +286,8 @@
 }
 
 .header__list-social-item {
+  user-select: none;
+
   &--instagram {
     align-self: flex-end;
   }
