--- a/source/sass/blocks/tabs.scss
+++ b/source/sass/blocks/tabs.scss
@@ -42,6 +42,7 @@
   font-size: 20px;
   line-height: 30px;
   opacity: 0.5;
+  user-select: none;
 
   @media (max-width: $tablet-width) {
     font-size: 18px;
@@ -244,7 +245,11 @@
   margin-bottom: 65px;
 
   @media (max-width: $tablet-width) {
-      margin-bottom: 53px;
+    margin-bottom: 64px;
+  }
+
+  @media (max-width: $mobile-width) {
+    margin-bottom: 53px;
   }
 }
 
@@ -259,13 +264,14 @@
   z-index: 1;
 
   @media (max-width: $tablet-width) {
-    margin-bottom: 30px;
+    margin-bottom: 34px;
   }
 
   @media (max-width: $mobile-width) {
     font-size: 48px;
     line-height: 72px;
     margin-left: 6px;
+    margin-bottom: 30px;
   }
 }
 
@@ -294,6 +300,7 @@
   text-transform: uppercase;
   border: 2px solid $color-resolution-blue;
   letter-spacing: 0.7px;
+  user-select: none;
 
   @media (max-width: $tablet-width) {
     width: 45.98%;
